resolve using deprecated method at CodePoints. #965 (#969)